syntax = "proto3";

import "Protos/Common.proto";

service PaxosService {
	rpc Prepare(PrepareRequest) returns (PromiseResponse);
	rpc Accept(AcceptRequest) returns (AcceptedResponse);
}

message PrepareRequest  {
	int32 timestamp = 1;
}

message PromiseResponse {
	int32 timestamp = 1;
	repeated Lease value = 2;
}

message AcceptRequest {
	int32 timestamp = 1;
	repeated Lease value = 2;
}

message AcceptedResponse {
	int32 timestamp = 1;
	repeated Lease value = 2;
}